[gd_scene load_steps=5 format=2]

[ext_resource path="res://black_background.jpg" type="Texture" id=1]
[ext_resource path="res://UserInfo.gd" type="Script" id=2]
[ext_resource path="res://UserSex.tres" type="ButtonGroup" id=3]

[sub_resource type="MeshTexture" id=1]

[node name="UserInfo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 312.0
margin_top = 37.5
margin_right = 712.0
margin_bottom = 557.5
rect_min_size = Vector2( 400, 520 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 35.0
margin_top = 60.0
margin_right = 365.0
margin_bottom = 480.0
rect_min_size = Vector2( 330, 420 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 330.0
margin_bottom = 14.0
text = "User Info"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 330.0
margin_bottom = 33.0
rect_min_size = Vector2( 0, 15 )

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 37.0
margin_right = 330.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 57.0
margin_bottom = 19.0
text = "User ID: "

[node name="UserIDText" type="TextEdit" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 61.0
margin_right = 312.0
margin_bottom = 25.0
rect_min_size = Vector2( 251, 25 )

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 66.0
margin_right = 330.0
margin_bottom = 91.0

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 32.0
margin_bottom = 19.0
text = "Age: "

[node name="AgeText" type="TextEdit" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 36.0
margin_right = 312.0
margin_bottom = 25.0
rect_min_size = Vector2( 276, 25 )

[node name="HBoxContainer4" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 95.0
margin_right = 330.0
margin_bottom = 119.0

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_top = 5.0
margin_right = 30.0
margin_bottom = 19.0
text = "Sex: "

[node name="MaleCheckBox" type="CheckBox" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 34.0
margin_right = 93.0
margin_bottom = 24.0
group = ExtResource( 3 )
text = "Male"

[node name="FemaleCheckBox" type="CheckBox" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 97.0
margin_right = 172.0
margin_bottom = 24.0
group = ExtResource( 3 )
text = "Female"

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 123.0
margin_right = 330.0
margin_bottom = 143.0

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_top = 3.0
margin_right = 55.0
margin_bottom = 17.0
text = "Gender: "

[node name="GenderOptions" type="OptionButton" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 59.0
margin_right = 259.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
text = "Woman"
items = [ "Woman", null, false, 0, null, "Man", null, false, 1, null, "Transgender", null, false, 2, null, "Non-binary/non-conforming", null, false, 3, null, "Prefer not to respond", null, false, 4, null, "Item 5", SubResource( 1 ), true, 5, null ]
selected = 0

[node name="HBoxContainer6" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 147.0
margin_right = 330.0
margin_bottom = 167.0

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_top = 3.0
margin_right = 65.0
margin_bottom = 17.0
text = "Interface: "

[node name="InterfaceOptions" type="OptionButton" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 69.0
margin_right = 259.0
margin_bottom = 20.0
rect_min_size = Vector2( 190, 0 )
text = "Joystick"
items = [ "Joystick", null, false, 0, null, "Head Array", null, false, 1, null, "Sip/Puff", null, false, 2, null ]
selected = 0

[node name="HBoxContainer7" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 171.0
margin_right = 330.0
margin_bottom = 196.0

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_top = 5.0
margin_right = 130.0
margin_bottom = 19.0
text = "Daily Interface Use: "

[node name="InterfaceUseText" type="TextEdit" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_left = 134.0
margin_right = 312.0
margin_bottom = 25.0
rect_min_size = Vector2( 178, 25 )

[node name="HBoxContainer5" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 200.0
margin_right = 330.0
margin_bottom = 220.0

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_top = 3.0
margin_right = 87.0
margin_bottom = 17.0
text = "Handedness: "

[node name="HandednessOptions" type="OptionButton" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 91.0
margin_right = 259.0
margin_bottom = 20.0
rect_min_size = Vector2( 168, 0 )
text = "Left"
items = [ "Left", null, false, 0, null, "Right", null, false, 1, null, "Ambidextrous", null, false, 2, null ]
selected = 0

[node name="Label2" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 224.0
margin_right = 330.0
margin_bottom = 238.0
text = "Injury: "

[node name="InjuryText" type="TextEdit" parent="NinePatchRect/VBoxContainer"]
margin_top = 242.0
margin_right = 330.0
margin_bottom = 342.0
rect_min_size = Vector2( 0, 100 )

[node name="SubmitButton" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_top = 346.0
margin_right = 330.0
margin_bottom = 366.0
text = "Submit"

[node name="CancelButton" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_top = 370.0
margin_right = 330.0
margin_bottom = 390.0
text = "Cancel"

[node name="ClearButton" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_top = 394.0
margin_right = 330.0
margin_bottom = 414.0
text = "Clear Data"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="NinePatchRect/VBoxContainer"]
margin_top = 418.0
margin_right = 330.0
margin_bottom = 558.0
rect_min_size = Vector2( 300, 140 )
window_title = "Please Confirm"
resizable = true
dialog_text = "This User ID already exists. Are you sure that you would like to overwrite the existing information for this User ID?"
dialog_autowrap = true

[node name="AcceptDialog" type="AcceptDialog" parent="NinePatchRect/VBoxContainer"]
margin_top = 418.0
margin_right = 330.0
margin_bottom = 476.0
resizable = true
dialog_text = "All fields must be filled in to submit user info."

[node name="AcceptDialog2" type="AcceptDialog" parent="NinePatchRect/VBoxContainer"]
margin_top = 418.0
margin_right = 330.0
margin_bottom = 544.0
resizable = true
dialog_text = "Inputted age must be in the form of an integer."
dialog_autowrap = true

[node name="DataConfirmationDialog" type="ConfirmationDialog" parent="NinePatchRect/VBoxContainer"]
margin_right = 330.0
margin_bottom = 140.0
rect_min_size = Vector2( 330, 140 )
resizable = true
dialog_text = "Are you sure you want to clear existing data for this user? You will not be able to recover this data once this action has been completed."
dialog_autowrap = true

[node name="AcceptDialog3" type="AcceptDialog" parent="NinePatchRect/VBoxContainer"]
margin_top = 418.0
margin_right = 330.0
margin_bottom = 476.0
resizable = true
dialog_text = "This user's data has been cleared."
dialog_autowrap = true
[connection signal="text_changed" from="NinePatchRect/VBoxContainer/HBoxContainer/UserIDText" to="." method="_on_UserIDText_text_changed"]
[connection signal="toggled" from="NinePatchRect/VBoxContainer/HBoxContainer4/MaleCheckBox" to="." method="_on_MaleCheckBox_toggled"]
[connection signal="toggled" from="NinePatchRect/VBoxContainer/HBoxContainer4/FemaleCheckBox" to="." method="_on_FemaleCheckBox_toggled"]
[connection signal="item_selected" from="NinePatchRect/VBoxContainer/HBoxContainer3/GenderOptions" to="." method="_on_GenderOptions_item_selected"]
[connection signal="item_selected" from="NinePatchRect/VBoxContainer/HBoxContainer6/InterfaceOptions" to="." method="_on_InterfaceOptions_item_selected"]
[connection signal="item_selected" from="NinePatchRect/VBoxContainer/HBoxContainer5/HandednessOptions" to="." method="_on_HandednessOptions_item_selected"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/SubmitButton" to="." method="_on_SubmitButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="confirmed" from="NinePatchRect/VBoxContainer/ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="confirmed" from="NinePatchRect/VBoxContainer/AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
[connection signal="confirmed" from="NinePatchRect/VBoxContainer/DataConfirmationDialog" to="." method="_on_DataConfirmationDialog_confirmed"]
